# pips

linear/.svn/: wc.db
linear/makes/: get-pips4u.sh
linear/makes/.svn/: wc.db
linear/src/Tests/: feasability.c  sc_cmp.c  sc_env.c  sc_min.c  sc_proj.c  simp.c  test_env_chernikova.c  time_sg_union.c
linear/src/arithmetique/: Makefile  Makefile.am  abs.c  arithmetique-local.h  divide.c  errors.c  exp.c  linear_assert.h  modulo.c  pgcd.c  ppcm.c
linear/src/contrainte/: binaires.c  io.c  listes.c  normalize.c  predicats.c  unaires.c
linear/src/matrice/: determinant.c  hermite.c  inversion.c  matrice.c  matrice_io.c  smith.c
linear/src/matrix/: alloc.c  determinant.c  hermite.c  inversion.c  matrix.c  matrix_io.c  smith.c  sub-matrix.c
linear/src/plint/: sc-fais-int-sm.c  sc_to_matrice.c
linear/src/polyedre/: chernikova.c  sc_enveloppe.c
linear/src/polynome/: pnome-alloc.c  pnome-io.c  pnome-reduc.c  pnome-root.c
linear/src/sc/: sc-local.h  sc.c  sc_alloc.c  sc_build_sc_nredund.c  sc_debug.c  sc_eval.c  sc_feasibility.c  sc_intersection.c  sc_io.c  sc_misc.c  sc_new_loop_bound.c  sc_normalize.c  sc_projection.c  sc_read.c  sc_simplex_feasibility.c  sc_unaires.c  (+3 more)
newgen/.svn/: wc.db
newgen/makes/: aarch64.mk  build_root.mk  has_swig.mk  main.mk
pips/: .gitignore  Makefile.am
pips/.svn/: wc.db
pips/makes/: LINUX_aarch64_LL.mk  aarch64.mk  arch.sh  proto.sed  setup_pips.sh
pips/src/Libs/task_parallelization/: Makefile.am  SDG.c  cost_model.c  mpi_conversion.c  mpi_generation.c  task_mapping.c  task_parallelization-local.h  variable_replication.c
(+304 files in other folders)
